--- a/template.vcxproj
+++ b/template.vcxproj
@@ -214,6 +214,9 @@
   <ItemGroup>
     <ResourceCompile Include="res.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="glm.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
