--- a/template.vcxproj.filters
+++ b/template.vcxproj.filters
@@ -231,4 +231,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="glm.natvis" />
+  </ItemGroup>
 </Project>
