Allow release builds to, well, build
and add natvis files (WIP)

--- a/template.vcxproj.filters
+++ b/template.vcxproj.filters
@@ -233,5 +233,8 @@
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="glm.natvis" />
+    <Natvis Include="imgui.natvis" />
+    <Natvis Include="NatvisFile.natvis" />
+    <Natvis Include="ufbx.natvis" />
   </ItemGroup>
 </Project>
