--- a/template.vcxproj
+++ b/template.vcxproj
@@ -115,7 +115,6 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -216,6 +215,9 @@
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="glm.natvis" />
+    <Natvis Include="imgui.natvis" />
+    <Natvis Include="NatvisFile.natvis" />
+    <Natvis Include="ufbx.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
