--- a/template.vcxproj
+++ b/template.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="engine\Audio.h" />
     <ClInclude Include="engine\Console.h" />
     <ClInclude Include="engine\Cursor.h" />
+    <ClInclude Include="engine\DropLabel.h" />
     <ClInclude Include="engine\Framebuffer.h" />
     <ClInclude Include="engine\InputsMap.h" />
     <ClInclude Include="engine\JsonUtils.h" />
@@ -151,6 +152,7 @@
     <ClCompile Include="engine\BigTables.cpp" />
     <ClCompile Include="engine\Console.cpp" />
     <ClCompile Include="engine\Cursor.cpp" />
+    <ClCompile Include="engine\DropLabel.cpp" />
     <ClCompile Include="engine\Framebuffer.cpp" />
     <ClCompile Include="engine\ImGuiDebugger.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
