--- a/template.vcxproj.filters
+++ b/template.vcxproj.filters
@@ -115,6 +115,9 @@
     <ClCompile Include="engine\DropLabel.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="engine\NineSlicer.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\Audio.h">
@@ -178,6 +181,9 @@
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="engine\DropLabel.h">
+      <Filter>Engine\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\NineSlicer.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
