--- a/template.vcxproj
+++ b/template.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="engine\JsonUtils.h" />
     <ClInclude Include="engine\Model.h" />
     <ClInclude Include="engine\NineSlicer.h" />
+    <ClInclude Include="engine\Platform.h" />
     <ClInclude Include="engine\Shader.h" />
     <ClInclude Include="engine\SpriteRenderer.h" />
     <ClInclude Include="engine\Text.h" />
@@ -166,6 +167,7 @@
     <ClCompile Include="engine\MeshBucket.cpp" />
     <ClCompile Include="engine\Model.cpp" />
     <ClCompile Include="engine\NineSlicer.cpp" />
+    <ClCompile Include="engine\PlatformWin32.cpp" />
     <ClCompile Include="engine\Shader.cpp" />
     <ClCompile Include="engine\SpriteRenderer.cpp" />
     <ClCompile Include="engine\Text.cpp" />
