Include ThreadedLoader and Random

--- a/template.vcxproj.filters
+++ b/template.vcxproj.filters
@@ -118,6 +118,12 @@
     <ClCompile Include="engine\PlatformWin32.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="engine\Random.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\ThreadedLoader.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\Audio.h">
@@ -187,6 +193,9 @@
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="engine\Platform.h">
+      <Filter>Engine\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\Random.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
