--- a/template.vcxproj
+++ b/template.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="engine\Model.h" />
     <ClInclude Include="engine\NineSlicer.h" />
     <ClInclude Include="engine\Platform.h" />
+    <ClInclude Include="engine\Random.h" />
     <ClInclude Include="engine\Shader.h" />
     <ClInclude Include="engine\SpriteRenderer.h" />
     <ClInclude Include="engine\Text.h" />
@@ -167,12 +168,14 @@
     <ClCompile Include="engine\Model.cpp" />
     <ClCompile Include="engine\NineSlicer.cpp" />
     <ClCompile Include="engine\PlatformWin32.cpp" />
+    <ClCompile Include="engine\Random.cpp" />
     <ClCompile Include="engine\Shader.cpp" />
     <ClCompile Include="engine\SpriteRenderer.cpp" />
     <ClCompile Include="engine\Text.cpp" />
     <ClCompile Include="engine\TextField.cpp" />
     <ClCompile Include="engine\Texture.cpp" />
     <ClCompile Include="engine\TextUtils.cpp" />
+    <ClCompile Include="engine\ThreadedLoader.cpp" />
     <ClCompile Include="engine\Tilemap.cpp" />
     <ClCompile Include="engine\Utilities.cpp" />
     <ClCompile Include="engine\VFS.cpp" />
