--- a/template.vcxproj
+++ b/template.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="engine\Cursor.h" />
     <ClInclude Include="engine\DropLabel.h" />
     <ClInclude Include="engine\Framebuffer.h" />
+    <ClInclude Include="engine\Game.h" />
     <ClInclude Include="engine\InputsMap.h" />
     <ClInclude Include="engine\JsonUtils.h" />
     <ClInclude Include="engine\Model.h" />
