--- a/template.vcxproj
+++ b/template.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="engine\Texture.h" />
     <ClInclude Include="engine\TextUtils.h" />
     <ClInclude Include="engine\Tickable.h" />
+    <ClInclude Include="engine\Tickable2D.h" />
     <ClInclude Include="engine\Tilemap.h" />
     <ClInclude Include="engine\Types.h" />
     <ClInclude Include="engine\Utilities.h" />
